dashboard/dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "citrix"
    ingress.citrix.com/secure-backend: '{"kubernetes-dashboard":"true"}'
spec:
  tls:
  - secretName: wildcard-cert
  rules:
  - host: dashboard.testvm01
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
